# labyrinth

./: .gitignore  LICENSE  README.md  TODO.md  build  build-prof  exec  exec-prof  exec.sh  haddock  haddock.sh  labyrinth.cabal  labyrinth.sublime-project  labyrinth.sublime-workspace  package.yaml  profile  stack.yaml  test-watch
app/: Main.hs  OldMain.hs
app/Data/List/: Extended.hs
app/UI/: Game.hs  Graphics.hs  Players.hs
etc/: rules.md  tiles-option-1.txt  tiles-option-2.txt  tiles.txt
lib/: Labyrinth.hs
lib/Data/: Random.hs
lib/Data/List/: Extended.hs
lib/Labyrinth/: Board.hs  Builder.hs  Cell.hs  Direction.hs  Game.hs  Game.hs.orig  GameDescription.hs  Gate.hs  Goal.hs  Player.hs  Players.hs  Position.hs  Random.hs  Screens.hs  Sketch.hs  Store.hs  Tile.hs  Transitable.hs  Treasure.hs  UI-old.hs  UI.hs  UI.hs.orig  Widgets.hs
lib/Labyrinth/Builder/: Internal.hs  Validation.hs
lib/Labyrinth/Game/: Board.hs  Builder.hs  Cell.hs  Class.hs  Configuration.hs  Description.hs  Direction.hs  Gate.hs  Internal.hs  NewGame.hs  Player.hs  Players.hs  Position.hs  Tile.hs  Treasure.hs
lib/Labyrinth/Screens/: Internal.hs  Registration.hs  Splash.hs
lib/Labyrinth/Store/: Internal.hs  RegistrationEvent.hs  SplashEvent.hs
lib/Labyrinth/Store/Event/: Global.hs  Modal.hs  Registration.hs  Setup.hs  Splash.hs
lib/Labyrinth/UI/: Debug.hs  Game.hs  Global.hs  Internal.hs  Modal.hs  Players.hs  Widget.hs
lib/Labyrinth/UI/Screen/: Game.hs  Registration.hs  Setup.hs  Splash.hs
lib/Labyrinth/Widgets/: Internal.hs  PlayerForm.hs
oldApp/: Main.hs
oldApp/UI/: Game.hs  Players.hs
oldLib/Labyrinth/: Game.hs
oldLib/Labyrinth/Game/: Description.hs  Tile.hs
src/: Board.hs  Coord.hs  Draw.hs  Labyrinth.hs  Lib.hs  Main.hs  OldBoard.hs  Point.hs  Tile.hs  Tiles.hs  UI.hs
src/labyrinth/: Main.hs
test/: BuilderSpec.hs  GameSpec.hs  PlayerFormSpec.hs  PlayersSpec.hs  RegistrationScreenSpec.hs  Spec.hs
test/Game/: BuilderSpec.hs  ConfigurationSpec.hs  NewGameSpec.hs  TreasureSpec.hs
test/Screens/: RegistrationSpec.hs  SetupSpec.hs
test/Test/: Labyrinth.hs
test/Test/Labyrinth/: GameSpec.hs  PlayersSpec.hs  TileSpec.hs
test/UI/Screen/: SetupSpec.hs
