name:                labyrinth
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/grancalavera/labyrinth#readme
license:             BSD3
license-file:        LICENSE
author:              Leon Coto
maintainer:          leoncoto@gmail.com
copyright:           Leon Coto
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      lib
  ghc-options:         -Wall
  default-language:    Haskell2010
  exposed-modules:
    Labyrinth.Players
    Labyrinth.Game
    Labyrinth.Tile
    Labyrinth.Cell
    Labyrinth.Board
    Labyrinth.UI
    Labyrinth
  build-depends:
    base >= 4.7 && < 5,
    brick,
    containers,
    linear,
    microlens,
    microlens-th,
    random,
    vty,
    array

executable labyrinth
  main-is:             Main.hs
  hs-source-dirs:      src
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

  build-depends:
    base,
    labyrinth

test-suite labyrinth-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  ghc-options:         -Wall -fno-warn-orphans -threaded -rtsopts -with-rtsopts=-N
  main-is:             Spec.hs
  default-language:    Haskell2010

  other-modules:
    Test.Labyrinth
    Test.Labyrinth.PlayersSpec
    Test.Labyrinth.GameSpec
    Test.Labyrinth.TileSpec

  build-depends:
    base,
    containers,
    labyrinth,
    hspec,
    hspec-discover,
    microlens,
    QuickCheck

source-repository head
  type:     git
  location: https://github.com/grancalavera/labyrinth
